# fastapi-backend-template

./: .env.example  .gitignore  .importlinter  AGENTS.md  LICENSE  README.md  README.zh-CN.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/application/: providers.py
app/cache/: keys.py  redis.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  engine.py  session.py  types.py
app/domains/: enums.py
app/jobs/: __init__.py  cron.py  locks.py  logging.py  registry.py  run_worker.py  runner.py  scheduler.py
app/models/: __init__.py  audit_log.py  example.py  scheduled_job.py  scheduled_job_run.py
app/repositories/: audit_log_repository.py  base.py  example_repository.py  scheduled_job_repository.py
app/schemas/: audit_log.py  common.py  (+2 more)
docs/: api-design.md  architecture.md  backend-standards.md  database-design.md  deployment-guide.md  development-guide.md  job-guide.md  project-framework-standards.md  project-overview.md  redis-support.md  security-and-auth-placeholder.md  testing-guide.md
tests/: test_cache_keys.py  test_db_datetime.py  test_db_engine.py  test_db_types.py  test_distributed_scheduler.py  test_domain_enums.py  test_example_api.py  test_example_application.py  test_example_jobs.py  test_example_service.py  test_health.py  test_job_logging.py  test_job_registry.py  test_job_runner.py  test_logging.py  test_migrations.py  test_redis_client.py  test_redis_locks.py  test_scheduled_job_repository.py  test_scheduled_job_service.py  test_scheduled_run_worker.py  test_settings.py
(+30 files in other folders)
