[project]
name = "fastapi-backend-template"
version = "0.1.0"
description = "Reusable FastAPI modular-monolith backend template."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "email-validator>=2.1.0",
    "fastapi>=0.110.0",
    "psycopg[binary]>=3.1.0",
    "pymysql>=1.1.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
backend-jobs = "app.jobs.runner:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "import-linter>=2.3.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jose", "jose.*"]
ignore_missing_imports = true
